# migration-tool-for-gitlab

./: .gitignore  .gitlab-ci.yml  Cargo.toml  DEMO.md  README.md  gmt.yml-dist
src/: logging.rs  main.rs
src/config/: file.rs  mod.rs
src/diag/: empty.rs  mod.rs
src/git/: clone.rs
src/migration/: domain.rs  group.rs  mod.rs  project.rs
src/tests/: mod.rs
test-data/: gmt.yml
