[package]
name = "gmt"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dependencies]
anyhow = "1"

config = { version = "0.13.3", features = ["yaml"] }

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "json", "rustls-tls", "cookies"] }

log = "0.4.19"
log4rs = "1"

[dev-dependencies]
env_logger = "0.9.1"